--- a/Project/Template.uvprojx
+++ b/Project/Template.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32H743xx</Define>
               <Undefine></Undefine>
-              <IncludePath>..\Firmware\CMSIS\Include;..\Firmware\CMSIS\Device\ST\STM32H7xx\Include;..\Firmware\STM32H7xx_HAL_Driver\Inc;..\Firmware\STM32H7xx_HAL_Driver\Inc\Legacy;..\Code\BSP\inc;..\Code\Gereric\inc</IncludePath>
+              <IncludePath>..\Firmware\CMSIS\Include;..\Firmware\CMSIS\Device\ST\STM32H7xx\Include;..\Firmware\STM32H7xx_HAL_Driver\Inc;..\Firmware\STM32H7xx_HAL_Driver\Inc\Legacy;..\Code\BSP\inc;..\Code\Gereric\inc;..\ThirdParty\FreeRTOS-Kernel\include;..\Code\FreeRTOS_Port\inc;..\ThirdParty\FreeRTOS-Kernel\portable\RVDS\ARM_CM7\r0p1</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -648,9 +648,73 @@
         </Group>
         <Group>
           <GroupName>FreeRTOS/Port</GroupName>
+          <Files>
+            <File>
+              <FileName>FreeRTOSConfig.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Code\FreeRTOS_Port\inc\FreeRTOSConfig.h</FilePath>
+            </File>
+            <File>
+              <FileName>freertos_vTaskPort.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Code\FreeRTOS_Port\src\freertos_vTaskPort.c</FilePath>
+            </File>
+            <File>
+              <FileName>freertos_task.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Code\FreeRTOS_Port\src\freertos_task.c</FilePath>
+            </File>
+            <File>
+              <FileName>port.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ThirdParty\FreeRTOS-Kernel\portable\RVDS\ARM_CM7\r0p1\port.c</FilePath>
+            </File>
+          </Files>
         </Group>
         <Group>
           <GroupName>FreeRTOS</GroupName>
+          <Files>
+            <File>
+              <FileName>croutine.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ThirdParty\FreeRTOS-Kernel\croutine.c</FilePath>
+            </File>
+            <File>
+              <FileName>event_groups.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ThirdParty\FreeRTOS-Kernel\event_groups.c</FilePath>
+            </File>
+            <File>
+              <FileName>list.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ThirdParty\FreeRTOS-Kernel\list.c</FilePath>
+            </File>
+            <File>
+              <FileName>queue.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ThirdParty\FreeRTOS-Kernel\queue.c</FilePath>
+            </File>
+            <File>
+              <FileName>stream_buffer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ThirdParty\FreeRTOS-Kernel\stream_buffer.c</FilePath>
+            </File>
+            <File>
+              <FileName>tasks.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ThirdParty\FreeRTOS-Kernel\tasks.c</FilePath>
+            </File>
+            <File>
+              <FileName>timers.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ThirdParty\FreeRTOS-Kernel\timers.c</FilePath>
+            </File>
+            <File>
+              <FileName>heap_4.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ThirdParty\FreeRTOS-Kernel\portable\MemMang\heap_4.c</FilePath>
+            </File>
+          </Files>
         </Group>
       </Groups>
     </Target>
